[package]
name = "hakyell2zola"
version = "0.1.0"
authors = ["utky <ilyaletre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"